<resources>
    <string name="app_name">BookStorePhuongNam</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up!</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="need_help">Need help?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_forgot_pass">Enter the email address \nassociated with your account.</string>
    <string name="desc_forgot_pass">We will email you a link to reset\n your password.</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="send">Send</string>
    <string name="title_verify">Enter the verification code\n we just sent you on your email address.</string>
    <string name="new_credentials">Create a new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="desc_update_password">Create a new password to\n log into the app</string>
    <string name="finish">Finish</string>
    <string name="change_password">Create a new password</string>
    <string name="desc_change_password">Create a new password to\n log into the app</string>
    <string name="so_luong">Số lượng</string>
    <string name="ten_sach">Tên sách</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="desc_signup">Please complete the information below\n for us to complete the user registration for you.</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
</resources>