<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/verification"
    android:orientation="vertical"
    tools:context=".PasswordUpdate">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_secure" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/new_credentials"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/desc_update_password"
        android:textColor="#A5A5B5"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/border_button_forgot_pass"
        android:hint="@string/new_password"
        android:paddingLeft="30dp"
        android:textColor="#fff"
        android:textColorHint="#777797"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/border_button_forgot_pass"
        android:hint="@string/confirm_password"
        android:paddingLeft="30dp"
        android:textColor="#fff"
        android:textColorHint="#777797"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/boder_button_login"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>