<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgot_pass"
    android:orientation="vertical"
    tools:context=".forgot_password">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_forgot_lock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title_forgot_pass"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/desc_forgot_pass"
        android:textColor="#A7A7B4"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/border_button_forgot_pass"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_email"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawableStart="@drawable/custom_email_focus_icon"
        android:textColorHint="#777797"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:drawablePadding="12dp"
        android:inputType="textNoSuggestions"
        android:padding="14dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/boder_button_login"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>