<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#243441"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="Wellcome to"
            android:textColor="#fff"
            android:textSize="32dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            android:text="Book store Phương Nam"
            android:textColor="#fff"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            android:text="Sign in to continue!"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="46dp"
            android:text="Sign in!"
            android:textColor="#fff"
            android:textSize="32dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:pointerIcon="arrow"
            android:textColorHint="#80FFFFFF"
            app:counterTextAppearance="@style/CounterText"
            app:counterTextColor="@color/colorWhite"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorWhite"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/boder_edit_text"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="Username"
                android:inputType="textNoSuggestions|textCapSentences"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            android:textColorHint="#80FFFFFF"
            app:counterTextAppearance="@style/CounterText"
            app:endIconTint="@color/colorBlack"
            app:hintTextAppearance="@style/HintText"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite"
            app:startIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/boder_edit_text"
                android:inputType="textPassword"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorWhite">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#80FFFFFF"
                android:text="Remember me"
                android:textColor="#80FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:gravity="center_vertical"
                android:text="Forgot password?"
                android:textColor="#80FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

<!--        <ProgressBar-->
<!--            android:id="@+id/progress_bar"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:progress="25"-->
<!--            android:visibility="visible"-->
<!--            style="@style/Animation.Design.BottomSheetDialog"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorBlack"
            android:text="@string/login"
            android:onClick="checkLogin"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_don_t_have_an_account"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Sign up"
                android:textColor="#EA4646"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>